--- a/tailwindcss/components/plaid/link.css
+++ b/tailwindcss/components/plaid/link.css
@@ -386,11 +386,11 @@
   /* ===== DIRECTIONAL CTA VARIANTS ===== */
   /* CTA Down */
   :where(.sds-theme-plaid .link.link-cta-down)::after {
-    @apply rotate-90 -top-0.75;
+    @apply rotate-90 -top-0.5;
   }
 
   :where(.sds-theme-plaid .link.link-cta-down:hover)::after {
-    @apply translate-x-0 translate-y-0.75;
+    @apply translate-x-0 translate-y-0.5;
   }
 
   /* CTA Left */
@@ -408,10 +408,10 @@
 
   /* CTA Up */
   :where(.sds-theme-plaid .link.link-cta-up)::after {
-    @apply -rotate-90 -top-0.75;
+    @apply -rotate-90 -top-0.5;
   }
 
   :where(.sds-theme-plaid .link.link-cta-up:hover)::after {
-    @apply translate-x-0 -translate-y-0.75;
+    @apply translate-x-0 -translate-y-0.5;
   }
 }
